# PRESS

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  train.py
configs/: baseline.yaml
configs/experiments/: 1-epoch.yaml  1_epoch.yaml  baseline.yaml
data/: data_fetcher.py
notebooks/: 01-eda.ipynb
scripts/: train.py
src/: config.py
src/data/: dataset.py
src/models/: factory.py
src/trainers/: classifier_trainer.py
src/utils/: azure_blob.py
tests/: test_dataset.py  test_trainer.py
